[project]
name = "ezchart"
version = "0.1.0"
description = "Produce Apex charts, from Json data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.4",
    "ruff>=0.11.11",
]


[project.optional-dependencies]
build = ["setuptools", "packaging"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

